# robotarium-slam

./: .gitignore  README.md  bearing_range.py  controller.py  drive_forward.py  graphing.py  justfile  main.py  odometry.py  orientation.py  pyproject.toml  utilities.py  utils.py
data/slam15/: deadreckoning_trajectories.npy  distance_readings.npy  encoder_readings.npy  gt_trajectories.npy  heading_readings.npy  trajectory_estimate.npy
data/slam16/: deadreckoning_trajectories.npy  distance_readings.npy  encoder_readings.npy  gt_trajectories.npy  heading_readings.npy  trajectory_estimate.npy
notebooks/: encoders.ipynb
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
tests/: test_bearing_range.py  test_odometry.py
