[project]
name = "slam-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxopt>=1.3.3",
    "gtsam==4.2",
    "matplotlib>=3.10.9",
    "numpy<2",
    "pyqt5>=5.15.11",
    "robotarium-python-simulator",
    "scipy>=1.15.3",
    "tk>=0.1.0",
]

[tool.uv.sources]
robotarium-python-simulator = { git = "https://github.com/robotarium/robotarium_python_simulator.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pdoc>=16.0.0",
]
